Fixed an issue where the popular articles section had overflow caused by a fixed height.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -336,7 +336,6 @@ footer {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 250px;
 	max-width: 1500px;
 }
 
@@ -631,7 +630,7 @@ footer {
 		justify-content: center;
 	}
 	.brand-banner-container {
-		height: 150px;
+		height: auto;
 	}
 	.brand-banner {
 		flex-direction: column;
